<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_sync" />

<!--        <item-->
<!--            android:id="@+id/nav_dial_sync"-->
<!--            android:icon="@drawable/ic_profile"-->
<!--            android:title="@string/nav_dial_sync" />-->

        <item
            android:id="@+id/nav_addmother"
            android:icon="@drawable/ic_profile"
            android:title="@string/addmotherchile" />
        <item
            android:id="@+id/nav_setpin"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/setpin" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_lock_open"
            android:title="@string/logout" />
    </group>

</menu>
