<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.anm.bslndmag.Settings"
    tools:showIn="@layout/activity_add_mother"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
   >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/setting_english"
                android:textSize="@dimen/twentysp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/fivedp"
                android:background="@color/trans_gray"
                app:layout_constraintBottom_toTopOf="@+id/id_bottom"
                app:layout_constraintStart_toEndOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="@dimen/fifteensp"
                android:background="@color/trans_gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/fifteensp"
                android:layout_marginRight="@dimen/tendp"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_navigate_next"
                android:elevation="@dimen/fivedp"
                android:paddingLeft="@dimen/fivedp"
                android:paddingTop="@dimen/tendp"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/login_english"

                android:textSize="@dimen/twentysp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_addfnf"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/fifteensp"
                android:layout_marginRight="@dimen/tendp"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_navigate_next"
                android:elevation="@dimen/fivedp"
                android:paddingLeft="@dimen/fivedp"
                android:paddingTop="@dimen/tendp"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/addfnf_english"

                android:textSize="@dimen/twentysp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_changelanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/fifteensp"
                android:layout_marginRight="@dimen/tendp"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_navigate_next"
                android:elevation="@dimen/fivedp"
                android:paddingLeft="@dimen/fivedp"
                android:paddingTop="@dimen/tendp"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/changelanguage_english"

                android:textSize="@dimen/twentysp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_termsandconditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/fifteensp"
                android:layout_marginRight="@dimen/tendp"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_navigate_next"
                android:elevation="@dimen/fivedp"
                android:paddingLeft="@dimen/fivedp"
                android:paddingTop="@dimen/tendp"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/termsandconditions_english"

                android:textSize="@dimen/twentysp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_privacypolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/fifteendp"
                android:layout_marginRight="@dimen/tendp"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_navigate_next"

                android:elevation="@dimen/fivedp"
                android:paddingLeft="@dimen/fivedp"
                android:paddingTop="@dimen/tendp"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/privacypolicy_english"
                android:textSize="@dimen/twentysp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_subscriptionplans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/fifteendp"
                android:layout_marginRight="@dimen/tendp"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_navigate_next"
                android:elevation="@dimen/fivedp"
                android:paddingLeft="@dimen/fivedp"
                android:paddingTop="@dimen/tendp"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/subscriptionplans_english"
                android:textSize="@dimen/twentysp"  />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_rateus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/fifteendp"
                android:layout_marginRight="@dimen/tendp"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_navigate_next"
                android:elevation="@dimen/fivedp"
                android:paddingLeft="@dimen/fivedp"
                android:paddingTop="@dimen/tendp"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/rateus_english"
                android:visibility="gone"
                android:textSize="@dimen/labelsise" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/fifteendp"
                android:layout_marginRight="@dimen/tendp"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_navigate_next"
                android:elevation="@dimen/fivedp"
                android:paddingLeft="@dimen/fivedp"
                android:paddingTop="@dimen/tendp"
                android:visibility="gone"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/aboutus_english"
                android:textSize="@dimen/labelsise" />



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/fifteendp"
                android:layout_marginRight="@dimen/tendp"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_navigate_next"
                android:elevation="@dimen/fivedp"
                android:paddingLeft="@dimen/fivedp"
                android:paddingTop="@dimen/tendp"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/logout_english"
                android:textSize="@dimen/labelsise" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_versionno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fifteensp"
        android:layout_marginLeft="@dimen/tendp"
        android:layout_marginRight="@dimen/tendp"
        android:paddingTop="@dimen/tendp"
        android:paddingBottom="@dimen/tendp"
        android:elevation="@dimen/fivedp"
        android:paddingLeft="@dimen/fivedp"
        android:gravity="right"
        android:textSize="@dimen/fifteensp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Version_1.0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
