<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginRight="@dimen/pv_pin_view_item_radius"
    android:layout_marginLeft="@dimen/pv_pin_view_item_radius"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/pv_pin_view_item_radius"
        android:layout_marginLeft="@dimen/pv_pin_view_item_radius"

        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:textSize="@dimen/labelheadersise"
            android:text="@string/searchmotherandchild"
           />

        <EditText
            android:id="@+id/et_searchmobileno"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="45dp"
            android:layout_margin="@dimen/twentydp"
            android:layout_marginTop="@dimen/twentydp"
            android:singleLine="true"
            app:queryHint="@string/entermobilenoormothername"

            android:textSize="@dimen/labelsise"
            android:textAlignment="center"
            android:paddingLeft="@dimen/termprivacy"

            android:maxLength="15"
            android:padding="5dp"
            tool:text="dfsjd"
            android:background="@drawable/textboxui"
            />

        <Button
            android:id="@+id/dialogButtonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:gravity="center"
            android:textSize="@dimen/labelheadersise"
            android:layout_margin="@dimen/twentydp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/buttonui"
            android:layout_marginTop="5dp"
            android:layout_marginRight="0dp"

            />
    </LinearLayout>

</LinearLayout>