<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:elevation="5dp"
        android:background="@color/dark_slate_gray"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal|center_vertical"
            android:textSize="16sp"
           android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/securitypinscreen"
            />
            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="Close"
                android:textSize="@dimen/labelsise"
                android:background="@android:color/transparent"
                android:textColor="@android:color/holo_red_dark"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingLeft="15dp"
            android:textSize="@dimen/labelsise"
            android:textColor="@color/black"
            android:text="@string/enterpinnumber"
            />

        <com.chaos.view.PinView
            android:id="@+id/otp_view"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:layout_gravity="center_horizontal"
            android:inputType="numberPassword"
            android:focusable="true"
            android:padding="5sp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@color/white"
            app:cursorColor="@color/colorPrimary"
            app:cursorWidth="2dp"
            app:itemCount="4"
            app:itemHeight="40dp"
            app:lineColor="@color/black"
            app:viewType="line" />
        <TextView
            android:id="@+id/tv_confirmpin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/labelsise"
            android:textColor="@color/black"
            android:paddingLeft="15dp"
            android:text="@string/reenterpinnumber"
            />
        <com.chaos.view.PinView
            android:id="@+id/confirmotp_view"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:layout_gravity="center_horizontal"
            android:inputType="numberPassword"
            android:focusable="true"
            android:padding="5sp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@color/white"
            app:cursorColor="@color/colorPrimary"
            app:cursorWidth="2dp"
            app:itemCount="4"
            app:itemHeight="40dp"
            app:lineColor="@color/black"
            app:viewType="line" />


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/btn_forgotpin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/forgotpin" />
    </LinearLayout>

</RelativeLayout>
