<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/splash_screen" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/rg_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/fivedp"
                android:elevation="@dimen/tendp"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@color/trans_gray"
                android:layout_marginBottom="@dimen/twentydp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chooselanguage"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textSize="@dimen/twentysp"/>
                <RadioButton
                    android:id="@+id/rb_english"
                    android:layout_width="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:text="@string/language_english"
                    android:background="@color/trans_gray"
                    android:padding="@dimen/tendp"
                    android:textColor="@color/dark_red"
                    android:textStyle="bold"
                    android:textSize="@dimen/fifteensp"
                    android:layout_margin="@dimen/fivedp"
                    />
                <RadioButton
                    android:id="@+id/rb_hindi"
                    android:layout_width="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:text="@string/language_hindi"
                    android:background="@color/trans_gray"
                    android:padding="@dimen/tendp"
                    android:textColor="@color/dark_red"
                    android:textStyle="bold"
                    android:textSize="@dimen/fifteensp"
                    android:layout_margin="@dimen/fivedp"
                    />
                <RadioButton
                    android:id="@+id/rb_gurmukhi"
                    android:layout_width="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/tendp"
                    android:layout_margin="@dimen/fivedp"
                    android:text="@string/language_gurmukhi"
                    android:textColor="@color/dark_red"
                    android:textSize="@dimen/fifteensp"
                    android:textStyle="bold"
                    android:background="@color/trans_gray"
                    />
            </RadioGroup>
        </FrameLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>